--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <img src="./img/11.png" class="man-img">
         </div>
         <div class="social">
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/drggtm01"><i class="fab fa-twitter"></i></a>
             
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.linkedin.com/in/durga-gautam-84534a226"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </div>
 
